--- a/Grow.Server/Views/Home/Program.cshtml
+++ b/Grow.Server/Views/Home/Program.cshtml
@@ -10,7 +10,7 @@
 
     <header class="special container">
         <span class="icon fa-calendar-o"></span>
-        <h2>Here's the <strong>Agenda</strong> of @ViewBag.CurrentContestName</h2>
+        <h2>Here's the <strong>Agenda</strong> of @ViewBag.SelectedContestName</h2>
     </header>
 
     <section id="calendar" class="wrapper style4 container">
