--- a/Grow.Server/Areas/Admin/Views/Contests/Index.cshtml
+++ b/Grow.Server/Areas/Admin/Views/Contests/Index.cshtml
@@ -31,7 +31,7 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
+@foreach (var item in Model.OrderByDescending(c => c.Year)) {
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Name)
