--- a/Grow.Server/Areas/Admin/Views/Home/Index.cshtml
+++ b/Grow.Server/Areas/Admin/Views/Home/Index.cshtml
@@ -11,7 +11,7 @@
                 <h5 class="card-title">Current public contest</h5>
             </div>
             <div class="card-body ">
-                <h2>@ViewBag.CurrentContestYear<h2>
+                <h2>@ViewBag.SelectedContestYear<h2>
             </div>
             <div class="card-footer ">
                 <hr>
