--- a/Grow.Server/Views/Shared/Layouts/_AdminLayout.cshtml
+++ b/Grow.Server/Views/Shared/Layouts/_AdminLayout.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@using Grow.Server.Model.Utils.Extensions
+@{
     Layout = "Layouts/_BackendLayout";
 
     var Controller = this.ViewContext.RouteData.Values["controller"].ToString();
@@ -22,6 +23,11 @@
             <i class="nc-icon nc-bank"></i>
             Contests
         </a>
+    </li>
+    <li>
+        <div class="form-group col-md-12">
+            @Html.ContestSelect((string)ViewBag.SelectedContestYear, (ICollection<Contest>)ViewBag.AllContests)
+        </div>
     </li>
     <li class="@SetActiveIfIsCurrentController("Program")">
         <a asp-controller="Events" asp-action="Index" asp-area="Admin">
