--- a/Grow.Server/Views/Shared/Layouts/_BackendLayout.cshtml
+++ b/Grow.Server/Views/Shared/Layouts/_BackendLayout.cshtml
@@ -6,21 +6,24 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
 
     <title>@ViewBag.Title - GROW by PionierGarage</title>
 
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet" />
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,900" rel="stylesheet" />
+    <link href="~/css/font-awesome.min.css" rel="stylesheet">
     <link href="~/plugins/paper-dashboard/css/bootstrap.min.css" rel="stylesheet" />
     <link href="~/plugins/paper-dashboard/css/paper-dashboard.min.css" rel="stylesheet" />
+    <link href="~/css/backend.min.css" rel="stylesheet">
 
     @RenderSection("Styles", required: false)
 </head>
 <body>
-    <div class="wrapper ">
+    <a name="top"></a>
+    <div class="wrapper">
 
         <!-- Side bar for navigation -->
         <div class="sidebar" data-color="red" data-active-color="danger">
@@ -87,10 +90,10 @@
                         <nav class="footer-nav">
                             <ul>
                                 <li>
-                                    <a asp-action="Index" asp-controller="Home" asp-area="">Back to main page</a>
+                                    <a asp-action="Index" asp-controller="Home" asp-area="">Back to public page</a>
                                 </li>
                                 <li>
-                                    <a asp-action="Logout" asp-controller="Account" asp-area="Admin">Logout</a>
+                                    <a href="#top">Back to top</a>
                                 </li>
                             </ul>
                         </nav>
@@ -115,6 +118,7 @@
     <script src="/plugins/paper-dashboard/js/plugins/chartjs.min.js"></script>
     <script src="/plugins/paper-dashboard/js/plugins/bootstrap-notify.js"></script>
     <script src="/plugins/paper-dashboard/js/paper-dashboard.min.js"></script>
+    <script src="/js/backend.min.js"></script>
 
     @RenderSection("Scripts", required: false)
 
