--- a/Grow.Server/Areas/Admin/Views/People/Delete.cshtml
+++ b/Grow.Server/Areas/Admin/Views/People/Delete.cshtml
@@ -1,11 +1,12 @@
 ﻿@model Grow.Server.Model.Entities.Person
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Delete";
 }
 
-<h2>Details</h2>
+<h2>Delete</h2>
 
+<h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Person</h4>
     <hr />
@@ -59,8 +60,11 @@
             @Html.DisplayFor(model => model.UpdatedAt)
         </dd>
     </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    
+    <form asp-action="Delete">
+        <input type="hidden" asp-for="Id" />
+        <input type="hidden" name="ReturnUrl" value="@ViewBag.ReturnUrl" />
+        <input type="submit" value="Delete" class="btn btn-default" /> |
+        <a href="@ViewBag.ReturnUrl">Back to List</a>
+    </form>
 </div>
