--- a/Grow.Server/Areas/Admin/Views/People/Details.cshtml
+++ b/Grow.Server/Areas/Admin/Views/People/Details.cshtml
@@ -61,6 +61,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model.Id" asp-route-returnUrl="@ViewBag.ReturnUrl">Edit</a> |
+    <a href="@ViewBag.ReturnUrl">Back to List</a>
 </div>
