--- a/Grow.Server/Areas/Admin/Views/Judges/Create.cshtml
+++ b/Grow.Server/Areas/Admin/Views/Judges/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Grow.Server.Model.Entities.Person
+﻿@model Grow.Server.Model.Entities.Judge
 
 @{
     ViewData["Title"] = "Create";
@@ -6,7 +6,7 @@
 
 <h2>Create</h2>
 
-<h4>Person</h4>
+<h4>Judge</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -16,6 +16,11 @@
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="WebsiteUrl" class="control-label"></label>
+                <input asp-for="WebsiteUrl" class="form-control" />
+                <span asp-validation-for="WebsiteUrl" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="JobTitle" class="control-label"></label>
@@ -28,19 +33,9 @@
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Expertise" class="control-label"></label>
-                <input asp-for="Expertise" class="form-control" />
-                <span asp-validation-for="Expertise" class="text-danger"></span>
-            </div>
-            <div class="form-group">
                 <label asp-for="Email" class="control-label"></label>
                 <input asp-for="Email" class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="WebsiteUrl" class="control-label"></label>
-                <input asp-for="WebsiteUrl" class="form-control" />
-                <span asp-validation-for="WebsiteUrl" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-default" />
