--- a/Grow.Server/Areas/Admin/Views/Judges/Delete.cshtml
+++ b/Grow.Server/Areas/Admin/Views/Judges/Delete.cshtml
@@ -1,15 +1,22 @@
-﻿@model Grow.Server.Model.Entities.Person
+﻿@model Grow.Server.Model.Entities.Judge
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Delete";
 }
 
-<h2>Details</h2>
+<h2>Delete</h2>
 
+<h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Person</h4>
+    <h4>Judge</h4>
     <hr />
     <dl class="dl-horizontal">
+        <dt>
+            @Html.DisplayNameFor(model => model.WebsiteUrl)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.WebsiteUrl)
+        </dd>
         <dt>
             @Html.DisplayNameFor(model => model.Name)
         </dt>
@@ -29,22 +36,10 @@
             @Html.DisplayFor(model => model.Description)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.Expertise)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Expertise)
-        </dd>
-        <dt>
             @Html.DisplayNameFor(model => model.Email)
         </dt>
         <dd>
             @Html.DisplayFor(model => model.Email)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.WebsiteUrl)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.WebsiteUrl)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.CreatedAt)
@@ -59,8 +54,10 @@
             @Html.DisplayFor(model => model.UpdatedAt)
         </dd>
     </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model.Id" asp-route-returnUrl="@ViewBag.ReturnUrl">Edit</a> |
-    <a href="@ViewBag.ReturnUrl">Back to List</a>
+    
+    <form asp-action="Delete">
+        <input type="hidden" asp-for="Id" />
+        <input type="submit" value="Delete" class="btn btn-default" /> |
+        <a asp-action="Index">Back to List</a>
+    </form>
 </div>
