--- a/Grow.Server/Areas/Admin/Views/Judges/Edit.cshtml
+++ b/Grow.Server/Areas/Admin/Views/Judges/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model Grow.Server.Model.Entities.Person
+﻿@model Grow.Server.Model.Entities.Judge
 
 @{
     ViewData["Title"] = "Edit";
@@ -6,12 +6,17 @@
 
 <h2>Edit</h2>
 
-<h4>Person</h4>
+<h4>Judge</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="form-group">
+                <label asp-for="WebsiteUrl" class="control-label"></label>
+                <input asp-for="WebsiteUrl" class="form-control" />
+                <span asp-validation-for="WebsiteUrl" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
@@ -28,22 +33,11 @@
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Expertise" class="control-label"></label>
-                <input asp-for="Expertise" class="form-control" />
-                <span asp-validation-for="Expertise" class="text-danger"></span>
-            </div>
-            <div class="form-group">
                 <label asp-for="Email" class="control-label"></label>
                 <input asp-for="Email" class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="WebsiteUrl" class="control-label"></label>
-                <input asp-for="WebsiteUrl" class="form-control" />
-                <span asp-validation-for="WebsiteUrl" class="text-danger"></span>
-            </div>
             <input type="hidden" asp-for="Id" />
-            <input type="hidden" name="ReturnUrl" value="@ViewBag.ReturnUrl" />
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-default" />
             </div>
@@ -52,6 +46,6 @@
 </div>
 
 <div>
-    <a href="@ViewBag.ReturnUrl">Back to List</a>
+    <a asp-action="Index">Back to List</a>
 </div>
 
