Separated code base into 3 projects: database layer, seed data initializer and server

--- a/Grow.Server/Areas/Admin/Views/Mentors/Index.cshtml
+++ b/Grow.Server/Areas/Admin/Views/Mentors/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Grow.Server.Model.Entities.Mentor>
+﻿@model IEnumerable<Grow.Data.Entities.Mentor>
 
 @{
     ViewData["Title"] = "Mentors | " + ViewBag.SelectedContestYear;
