--- a/Grow.Server/Views/Home/Index.cshtml
+++ b/Grow.Server/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model ICollection<Grow.Server.Model.Entities.Partner>
+﻿@model ICollection<Grow.Data.Entities.Partner>
 
 @{
     ViewBag.Title = "Welcome to GROW";
