--- a/Grow.Server/Views/Home/Mentors.cshtml
+++ b/Grow.Server/Views/Home/Mentors.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Grow.Server.Model.Utils.Extensions
-@model ICollection<Grow.Server.Model.Entities.Mentor>
+@model ICollection<Grow.Data.Entities.Mentor>
 
 @{
     ViewBag.Title = "Mentors";
