--- a/Grow.Server/Views/Home/Organizers.cshtml
+++ b/Grow.Server/Views/Home/Organizers.cshtml
@@ -1,4 +1,4 @@
-﻿@model ICollection<Grow.Server.Model.Entities.Person>
+﻿@model ICollection<Grow.Data.Entities.Person>
 
 @{
     ViewBag.Title = "Organizers";
