--- a/Grow.Server/Views/Home/Program.cshtml
+++ b/Grow.Server/Views/Home/Program.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Grow.Server.Model.Utils.Extensions
-@using Grow.Server.Model.Entities
-@model ICollection<Grow.Server.Model.Entities.Event>
+@using Grow.Data.Entities
+@model ICollection<Grow.Data.Entities.Event>
 
 @{
     ViewBag.Title = "Program";
