--- a/Grow.Server/Views/Shared/Layouts/_BackendLayout.cshtml
+++ b/Grow.Server/Views/Shared/Layouts/_BackendLayout.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@using Grow.Server.Model.Entities
+@using Grow.Data.Entities
 @inject SignInManager<Account> SignInManager
 @inject UserManager<Account> UserManager
 <!DOCTYPE HTML>
