--- a/Grow.Server/Areas/Admin/Views/Contests/Index.cshtml
+++ b/Grow.Server/Areas/Admin/Views/Contests/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Grow.Server.Model.Entities.Contest>
+﻿@model IEnumerable<Grow.Data.Entities.Contest>
 
 @{
     ViewData["Title"] = "Index";
