--- a/Grow.Server/Areas/Admin/Views/Events/Index.cshtml
+++ b/Grow.Server/Areas/Admin/Views/Events/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Grow.Server.Model.Entities.Event>
+﻿@model IEnumerable<Grow.Data.Entities.Event>
 
 @{
     ViewData["Title"] = "Events | " + ViewBag.SelectedContestYear;
