--- a/Grow.Server/Areas/Admin/Views/Judges/Index.cshtml
+++ b/Grow.Server/Areas/Admin/Views/Judges/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Grow.Server.Model.Entities.Judge>
+﻿@model IEnumerable<Grow.Data.Entities.Judge>
 
 @{
     ViewData["Title"] = "Judges | " + ViewBag.SelectedContestYear;
