--- a/Grow.Server/Areas/Admin/Views/Organizers/Index.cshtml
+++ b/Grow.Server/Areas/Admin/Views/Organizers/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Grow.Server.Model.Entities.Organizer>
+﻿@model IEnumerable<Grow.Data.Entities.Organizer>
 
 @{
     ViewData["Title"] = "Organizers | " + ViewBag.SelectedContestYear;
