--- a/Grow.Server/Areas/Admin/Views/Partners/Index.cshtml
+++ b/Grow.Server/Areas/Admin/Views/Partners/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Grow.Server.Model.Entities.Partner>
+﻿@model IEnumerable<Grow.Data.Entities.Partner>
 
 @{
     ViewData["Title"] = "Partners | " + ViewBag.SelectedContestYear;
