--- a/Grow.Server/Areas/Admin/Views/Prizes/Index.cshtml
+++ b/Grow.Server/Areas/Admin/Views/Prizes/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Grow.Server.Model.Entities.Prize>
+﻿@model IEnumerable<Grow.Data.Entities.Prize>
 
 @{
     ViewData["Title"] = "Prizes | " + ViewBag.SelectedContestYear;
