--- a/Grow.Server/Areas/Admin/Views/Teams/Index.cshtml
+++ b/Grow.Server/Areas/Admin/Views/Teams/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Grow.Server.Model.Entities.Team>
+﻿@model IEnumerable<Grow.Data.Entities.Team>
 
 @{
     ViewData["Title"] = "Teams | " + ViewBag.SelectedContestYear;
