--- a/Grow.Server/Areas/Admin/Views/Judges/Index.cshtml
+++ b/Grow.Server/Areas/Admin/Views/Judges/Index.cshtml
@@ -30,7 +30,7 @@
     <tbody>
         @foreach (var item in Model)
         {
-        <tr>
+        <tr is-active="@item.IsActive">
             <td>
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
@@ -43,11 +43,7 @@
             <td title="@item.Description">
                 @item.Description.DynamicSubstring(120)
             </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
+            <partial name="Partials/_OptionCell" model="item" />
         </tr>
         }
     </tbody>
