--- a/Grow.Server/Views/Home/Mentors.cshtml
+++ b/Grow.Server/Views/Home/Mentors.cshtml
@@ -1,5 +1,4 @@
-﻿@using Grow.Server.Model.Utils.Extensions
-@model ICollection<Grow.Data.Entities.Mentor>
+﻿@model ICollection<Grow.Data.Entities.Mentor>
 
 @{
     ViewBag.Title = "Mentors";
