--- a/Grow.Server/Views/Home/Program.cshtml
+++ b/Grow.Server/Views/Home/Program.cshtml
@@ -1,5 +1,4 @@
-﻿@using Grow.Server.Model.Utils.Extensions
-@using Grow.Data.Entities
+﻿@using Grow.Data.Entities
 @model ICollection<Grow.Data.Entities.Event>
 
 @{
