--- a/Grow.Server/Views/_ViewImports.cshtml
+++ b/Grow.Server/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@using Grow.Server.Model.Utils.Extensions
+@addTagHelper *, pioniergarage.grow.server
+@using Grow.Server.Model.Extensions
 @using Grow.Data.Entities
