--- a/Grow.Server/wwwroot/css/backend.css
+++ b/Grow.Server/wwwroot/css/backend.css
@@ -11,3 +11,12 @@
     opacity: 1; }
   #contest-selector option {
     color: black; }
+
+.options-column {
+  word-wrap: normal; }
+  .options-column i {
+    margin: auto 3px;
+    font-size: 120%; }
+
+tr.inactive {
+  background-color: rgba(0, 0, 0, 0.05); }
