--- a/Grow.Server/Areas/Admin/Views/Contests/Create.cshtml
+++ b/Grow.Server/Areas/Admin/Views/Contests/Create.cshtml
@@ -28,6 +28,13 @@
                 <span asp-validation-for="Language" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <div class="checkbox">
+                    <label>
+                        <input asp-for="IsActive" /> @Html.DisplayNameFor(model => model.IsActive)
+                    </label>
+                </div>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-default" />
             </div>
         </form>
