--- a/Grow.Server/Areas/Admin/Views/Contests/Edit.cshtml
+++ b/Grow.Server/Areas/Admin/Views/Contests/Edit.cshtml
@@ -27,6 +27,13 @@
                 <input asp-for="Language" class="form-control" />
                 <span asp-validation-for="Language" class="text-danger"></span>
             </div>
+            <div class="form-group">
+                <div class="checkbox">
+                    <label>
+                        <input asp-for="IsActive" /> @Html.DisplayNameFor(model => model.IsActive)
+                    </label>
+                </div>
+            </div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-default" />
