--- a/Grow.Server/Areas/Admin/Views/Mentors/Index.cshtml
+++ b/Grow.Server/Areas/Admin/Views/Mentors/Index.cshtml
@@ -33,7 +33,7 @@
     <tbody>
         @foreach (var item in Model)
         {
-        <tr>
+        <tr is-active="@item.IsActive">
             <td>
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
@@ -49,11 +49,7 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Email)
             </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
+            <partial name="Partials/_OptionCell" model="item" />
         </tr>
         }
     </tbody>
