--- a/Grow.Server/Areas/Admin/Views/Partners/Index.cshtml
+++ b/Grow.Server/Areas/Admin/Views/Partners/Index.cshtml
@@ -22,20 +22,17 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
+        @foreach (var item in Model)
+        {
+        <tr is-active="@item.IsActive">
             <td>
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Description)
             </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
+            <partial name="Partials/_OptionCell" model="item" />
         </tr>
-}
+        }
     </tbody>
 </table>
