--- a/Grow.Server/Areas/Admin/Views/Teams/Index.cshtml
+++ b/Grow.Server/Areas/Admin/Views/Teams/Index.cshtml
@@ -30,25 +30,21 @@
     <tbody>
         @foreach (var item in Model)
         {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Name)
-                </td>
-                <td title="@item.Description">
-                    @item.Description.DynamicSubstring(150)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Email)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.IsActive)
-                </td>
-                <td>
-                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-                </td>
-            </tr>
+        <tr is-active="@item.IsActive">
+            <td>
+                @Html.DisplayFor(modelItem => item.Name)
+            </td>
+            <td title="@item.Description">
+                @item.Description.DynamicSubstring(150)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Email)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.IsActive)
+            </td>
+            <partial name="Partials/_OptionCell" model="item" />
+        </tr>
         }
     </tbody>
 </table>
