--- a/Grow.Server/Areas/Admin/Views/_ViewImports.cshtml
+++ b/Grow.Server/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,2 +1,3 @@
 ﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@using Grow.Server.Model.Utils.Extensions
+@addTagHelper *, pioniergarage.grow.server
+@using Grow.Server.Model.Extensions
