--- a/Grow.Server/Areas/Admin/Views/Events/Create.cshtml
+++ b/Grow.Server/Areas/Admin/Views/Events/Create.cshtml
@@ -4,12 +4,23 @@
     ViewData["Title"] = "Create";
 }
 
+@section Scripts {
+    <script type="text/javascript">
+        $("#search-box #search-input").keyup(create_search_entity_function('events', 'search-results'));
+    </script>
+}
+
 <h2>Create</h2>
 
 <h4>Event</h4>
+
 <hr />
+<partial name="Partials/_SearchEntitiesBox" />
+<hr />
+
 <div class="row">
     <div class="col-md-4">
+
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
