--- a/Grow.Server/Areas/Admin/Views/Mentors/Create.cshtml
+++ b/Grow.Server/Areas/Admin/Views/Mentors/Create.cshtml
@@ -4,10 +4,20 @@
     ViewData["Title"] = "Create";
 }
 
+@section Scripts {
+    <script type="text/javascript">
+        $("#search-box #search-input").keyup(create_search_entity_function('mentors', 'search-results'));
+    </script>
+}
+
 <h2>Create</h2>
 
 <h4>Mentor</h4>
+
 <hr />
+<partial name="Partials/_SearchEntitiesBox" />
+<hr />
+
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
