--- a/Grow.Server/wwwroot/css/backend.css
+++ b/Grow.Server/wwwroot/css/backend.css
@@ -1,5 +1,7 @@
 ﻿@import url("/css/font-awesome.min.css");
 @import url("https://fonts.googleapis.com/css?family=Lato:300,400,900");
+/*! IMPORTANT! DO NOT EDIT THE CSS FILE, BUT THE SCSS ONE. OR YOUR CHANGES WILL BE OVERWRITTEN! */
+/* Column selector input in the Backend vertical navbar */
 #contest-selector {
   background-color: transparent;
   border-width: 0px 0 1px;
@@ -18,5 +20,30 @@
     margin: auto 3px;
     font-size: 120%; }
 
+/* Row for inactive entities on /Type/Index pages */
 tr.inactive {
   background-color: rgba(0, 0, 0, 0.05); }
+
+/* Entity search box */
+#search-box {
+  padding: 0 20px; }
+
+@keyframes loading-back {
+  0% {
+    background-position: 0% 50%; }
+  50% {
+    background-position: 100% 50%; }
+  100% {
+    background-position: 0% 50%; } }
+  #search-box #search-input.loading {
+    background: linear-gradient(270deg, rgba(255, 255, 255, 0), rgba(135, 228, 252, 0.35), rgba(255, 255, 255, 0));
+    background-size: 400% 100%;
+    animation: loading-back 1.5s ease infinite; }
+  #search-box ul#search-results {
+    list-style-type: none;
+    padding-left: 0px; }
+    #search-box ul#search-results li {
+      padding: 3px 10px; }
+      #search-box ul#search-results li:hover:not([disabled]) {
+        cursor: pointer;
+        background-color: rgba(0, 0, 0, 0.1); }
