--- a/Grow.Server/Areas/Admin/Views/Events/Edit.cshtml
+++ b/Grow.Server/Areas/Admin/Views/Events/Edit.cshtml
@@ -49,12 +49,12 @@
             </div>
             <div class="form-group">
                 <label asp-for="Visibility" class="control-label"></label>
-                <select asp-for="Visibility" class="form-control"></select>
+                <select asp-for="Visibility" asp-items="ViewBag.Visibilities" class="form-control"></select>
                 <span asp-validation-for="Visibility" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Type" class="control-label"></label>
-                <select asp-for="Type" class="form-control"></select>
+                <select asp-for="Type" asp-items="ViewBag.Types" class="form-control"></select>
                 <span asp-validation-for="Type" class="text-danger"></span>
             </div>
             <div class="form-group">
