--- a/Grow.Server/Areas/Admin/Views/Prizes/Edit.cshtml
+++ b/Grow.Server/Areas/Admin/Views/Prizes/Edit.cshtml
@@ -34,7 +34,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Type" class="control-label"></label>
-                <select asp-for="Type" class="form-control"></select>
+                <select asp-for="Type" asp-items="ViewBag.Types" class="form-control"></select>
                 <span asp-validation-for="Type" class="text-danger"></span>
             </div>
             <div class="form-group">
