--- a/Grow.Server/Styles/backend.scss
+++ b/Grow.Server/Styles/backend.scss
@@ -3,6 +3,14 @@
 
 /*! IMPORTANT! DO NOT EDIT THE CSS FILE, BUT THE SCSS ONE. OR YOUR CHANGES WILL BE OVERWRITTEN! */
 
+/* Small Design fixes */
+
+input[type=checkbox] {
+    transform: scale(1.5);
+    margin: 3px;
+    vertical-align: top;
+}
+
 /* Column selector input in the Backend vertical navbar */
 #contest-selector {
     background-color: transparent;
@@ -21,6 +29,7 @@
     }
 }
 
+/* Column containing actions on /Type/Index pages */
 .options-column {
     word-wrap: normal;
 
